@@ -1,3 +1,8 @@
+May 13, 2010 edgbla <edgbla@yandex.ru>
+
+ * libpcsxcore/plugins.h: PADreadPort1/2 for NRage pad plugin (windows).
+ * libpcsxcore/plugins.c: Likewise.
+
 May 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * configure.ac: Added plugins/dfnet/Makefile.am.
